[package]
name = "bevy_web_popups"
version = "0.5.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_web_popups"
repository = "https://github.com/rustunit/bevy_web_popups"
keywords = ["bevy", "gamedev", "web"]
description = "Allows to trigger web/dom based popups/alerts and textinput in bevy"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
bevy_app = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo = { version = "0.11", features = ["utils"] }
bevy_channel_trigger = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Document",
    "Element",
    "EventTarget",
]
